tests/copies/newAndNeedChangeTests/fail/Short.java
package fail;

import java.lang.System;

public class Short {

  public static void main(String[] args ) {
    short notAShort = "This is not a short";
  }

}
